force-app/main/default/objects/GWB_Edge_Signal__c/GWB_Edge_Signal__c.object-meta.xml
<CustomObject>
    <label>Edge Signal</label>
    <nameField>
        <displayFormat>SIG-{0000}</displayFormat>
        <label>Signal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Edge Signals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>