force-app/main/default/objects/GWB_Edge_Signal__c/fields/Current_Level__c.field-meta.xml
<CustomField>
    <fullName>Current_Level__c</fullName>
    <label>Current Level</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>