force-app/main/default/objects/GWB_Edge_Signal__c/fields/Minutes_To_Empty__c.field-meta.xml
<CustomField>
    <fullName>Minutes_To_Empty__c</fullName>
    <label>Minutes To Empty</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>