force-app/main/default/objects/GWB_Edge_Signal__c/fields/Plant_Function__c.field-meta.xml
<CustomField>
    <fullName>Plant_Function__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plant Function</label>
    <referenceTo>GWB_Plant_Function__c</referenceTo>
    <relationshipLabel>Edge Signals</relationshipLabel>
    <relationshipName>Edge_Signals</relationshipName>
    <type>Lookup</type>
</CustomField>