force-app/main/default/objects/GWB_Edge_Signal__c/fields/Raw_JSON__c.field-meta.xml
<CustomField>
    <fullName>Raw_JSON__c</fullName>
    <label>Raw JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>