force-app/main/default/objects/GWB_Edge_Signal__c/fields/Risk__c.field-meta.xml
<CustomField>
    <fullName>Risk__c</fullName>
    <label>Risk Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>