force-app/main/default/objects/GWB_Edge_Signal__c/fields/Signal_Type__c.field-meta.xml
<CustomField>
    <fullName>Signal_Type__c</fullName>
    <label>Signal Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Micro-Stoppage</fullName>
            </value>
            <value>
                <fullName>Bin-Depletion</fullName>
            </value>
            <value>
                <fullName>Idle-Time</fullName>
            </value>
            <value>
                <fullName>Overproduction</fullName>
            </value>
            <value>
                <fullName>Quality-Defect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>