force-app/main/default/objects/GWB_Edge_Signal__c/fields/Station__c.field-meta.xml
<CustomField>
    <fullName>Station__c</fullName>
    <label>Station</label>
    <length>100</length>
    <type>Text</type>
</CustomField>